--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ div.content {
 <body style="background-color:grey;">
 <div id=wrap>
   <div id=inside>
-   <h1 style="font-size:40px;">Snaily Games</h1>      
+   <h1 style="font-size:40px;">Snaily Chat</h1>      
   </div> 
 </div>
   <div id=wrap2>
