--- a/index.html
+++ b/index.html
@@ -1,150 +1,44 @@
   
 <!DOCTYPE html>
-<html>
-<title>Snaily Chat</title>
+<html lang="en">
 <head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Snaily-Chat</title>
 
-  <link rel="shortcut icon" type="image/x-icon" href="favivon.ico">
+	<script defer src="./ws.js"></script>
+	<script defer src="./add_message.js"></script>
+	<script>
+		function ask() {
+			const username = prompt('Hello 👋, What is your name?');
+			if(!username) ask();
+			document.username = username;
+		}
+		ask();
+	</script>
+	<link rel="stylesheet" type="text/css" href="./main.css">
+	<link rel="stylesheet" type="text/css" href="./message.css">
 </head>
-<style>
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
-
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #4CAF50;
-  color: white;
-}
-/* The side navigation menu */
-.sidebar {
-  margin: 0;
-  padding: 0;
-  width: 200px;
-  background-color: #333;
-  position: absolute;
-  height: 100%;
-  overflow: auto;
-}
-
-/* Sidebar links */
-.sidebar a {
-  display: block;
-  color: white;
-  padding: 16px;
-  text-decoration: none;
-}
-
-/* Active/current link */
-.sidebar a.active {
-  background-color: #4CAF50;
-  color: white;
-}
-
-/* Links on mouse-over */
-.sidebar a:hover:not(.active) {
-  background-color: #555;
-  color: white;
-}
-
-/* Page content. The value of the margin-left property should match the value of the sidebar's width property */
-div.content {
-  margin-left: 200px;
-  padding: 1px 16px;
-  height: 630px;
-}
-
-/* On screens that are less than 700px wide, make the sidebar into a topbar */
-@media screen and (max-width: 700px) {
-  .sidebar {
-    width: 100%;
-    height: auto;
-    position: relative;
-  }
-  .sidebar a {float: left;}
-  div.content {margin-left: 0;}
-}
-
-/* On screens that are less than 400px, display the bar vertically, instead of horizontally */
-@media screen and (max-width: 500px) {
-  .sidebar a {
-    text-align: center;
-    float: none;
-  }
-}
-#wrap {
-    /* Your styling. */
-    position: absolute;
-    z-index: 999999;
-     top: -200px;
-    left: 470px;
-    height: 100%;
-    text-align: center;
-
-    display: table;
-}
-
-#inside {
-    width: 100%;
-    height: 100%;
-    display: table-cell;
-    vertical-align: middle;
-}
- #wrap2 {
-    /* Your styling. */
-    position: absolute;
-    z-index: 999999;
-     top: 100px;
-    left: 600px;
-    height: 100%;
-    text-align: center;
-
-    display: table;
-}
-
-#inside2 {
-    width: 100%;
-    height: 100%;
-    display: table-cell;
-    vertical-align: middle;
-}
-
-</style>
-
-<header>
- <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="about.html">About</a>
-</div>
-</header>
-  
-<!-- Page content -->
-<div class="content">
 <body style="background-color:grey;">
-<div id=wrap>
-  <div id=inside>
-   <h1 style="font-size:40px;">Snaily Chat</h1>      
-  </div> 
-</div>
-    
+	<header>
+		<div class="topnav">
+     		<a class="active" href="#home">Home</a>
+     		<a href="admin">Admin</a>
+   		</div>
+  	</header>
+     
+
+
+   <div id="main-room">
+	   	<div id="main-messages">
+			
+	   	</div>
+
+	   	<div id="main-send">
+			<textarea id="chat-send" name="chat_message" placeholder="Send a message" class="chat_field chat_message"></textarea>
+	   	</div>
+   </div>
+
 </body>
 </html>
