--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<header>
 		<div class="topnav">
      		<a class="active" href="#home">Home</a>
-     		<a href="admin">Admin</a>
+     		<a href="admin" href="admin.html">Admin</a>
    		</div>
   	</header>
      
