--- a/admin.html
+++ b/admin.html
@@ -1,1 +1,38 @@
-Amongonsdjnf;ajndf
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Snaily-Chat</title>
+
+	<script defer src="./ws.js"></script>
+	<script defer src="./add_message.js"></script>
+
+	</script>
+	<link rel="stylesheet" type="text/css" href="./main.css">
+	<link rel="stylesheet" type="text/css" href="./message.css">
+</head>
+<body style="background-color:grey;">
+	
+	<header>
+		<div class="topnav">
+     		<a class="active" href="index.html">Home</a>
+     		<a href="admin" href="admin.html">Admin</a>
+   		</div>
+  	</header>
+     
+
+
+   <div id="main-room">
+	   	<div id="main-messages">
+			
+	   	</div>
+
+	   	<div id="main-send">
+			<textarea id="chat-send" name="chat_message" placeholder="Send a message" class="chat_field chat_message"></textarea>
+	   	</div>
+   </div>
+
+</body>
+</html>
