--- a/admin.html
+++ b/admin.html
@@ -17,8 +17,8 @@
 	
 	<header>
 		<div class="topnav">
-     		<a class="active" href="index.html">Home</a>
-     		<a href="admin" href="admin.html">Admin</a>
+     		<a href="index.html">Home</a>
+     		<a class="active" href="admin" href="admin.html">Admin</a>
    		</div>
   	</header>
      
