--- a/admin.html
+++ b/admin.html
@@ -21,6 +21,8 @@
      		<a class="active" href="admin" href="admin.html">Admin</a>
    		</div>
   	</header>
+	
+	<p> amongus </p>
 
 </body>
 </html>
