--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
    <div id="main-room">
 	   	<div id="main-messages">
-			/* Put People chats here */
+			<!-- Put People Chats here.-->
 	   	</div>
 
 	   	<div id="main-send">
