--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
 	   	<div id="main-messages">
 			<!-- Put People Chats here.-->
 	   	</div>
-
+	
+	   <div class=test>
 	   	<div id="main-send">
 			<textarea id="chat-send" name="chat_message" placeholder="Send a message" class="chat_field chat_message"></textarea>
 	   	</div>
+	   </div>
    </div>
 
 </body>
