--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 	
 	   	<div id="main-send">
 			<textarea id="chat-send" name="chat_message" placeholder="Send a message" class="chat_field chat_message"></textarea>
+			<button> Send </button>
 	   	</div>
    </div>
 
